# piranha-1

./: .gitignore  CMakeLists.txt  config.hpp.in  readme-setup.txt
benchmarks/: CMakeLists.txt
cmake_modules/: PiranhaFindBoost.cmake
cmake_modules/yacma/: YACMACompilerLinkerSettings.cmake
include/piranha/: CMakeLists.txt  array_key.hpp  base_series_multiplier.hpp  divisor.hpp  divisor_series.hpp  dynamic_aligning_allocator.hpp  exceptions.hpp  hash_set.hpp  integer.hpp  ipow_substitutable_series.hpp  is_key.hpp  kronecker_array.hpp  kronecker_monomial.hpp  lambdify.hpp  math.hpp  memory.hpp  monomial.hpp  polynomial.hpp  rational.hpp  real.hpp  safe_cast.hpp  safe_convert.hpp  series.hpp  settings.hpp  small_vector.hpp  static_vector.hpp  symbol_utils.hpp  thread_pool.hpp  type_traits.hpp
include/piranha/detail/: atomic_flag_array.hpp  cf_mult_impl.hpp  demangle.hpp  km_commons.hpp  parallel_vector_transform.hpp  safe_integral_arith.hpp  stacktrace.hpp
include/piranha/key/: key_degree.hpp  key_is_one.hpp  key_is_zero.hpp  key_ldegree.hpp
include/piranha/math/: binomial.hpp  cos.hpp  degree.hpp  gcd.hpp  gcd3.hpp  is_one.hpp  is_zero.hpp  ldegree.hpp  pow.hpp  sin.hpp
pyranha/: CMakeLists.txt  __init__.py  core.cpp  expose_polynomials.hpp  expose_utils.hpp  test.py  test.py.in  type_system.cpp  type_system.hpp
src/: config.hpp
tests/: CMakeLists.txt  array_key.cpp  atomic_utils.cpp  base_series_multiplier.cpp  binomial.cpp  cache_aligning_allocator.cpp  convert_to.cpp  degree.cpp  demangle.cpp  divisor_01.cpp  divisor_02.cpp  divisor_series_01.cpp  divisor_series_02.cpp  dynamic_aligning_allocator.cpp  exception_matcher.hpp  exceptions.cpp  gcd.cpp  hash_set_01.cpp  hash_set_02.cpp  integer_01.cpp  integer_02.cpp  invert.cpp  ipow_substitutable_series.cpp  is_cf.cpp  is_key.cpp  is_one.cpp  is_zero.cpp  key_degree.cpp  key_is_convertible.cpp  key_is_multipliable.cpp  key_is_one.cpp  key_is_zero.cpp  key_ldegree.cpp  kronecker_array.cpp  kronecker_monomial_01.cpp  kronecker_monomial_02.cpp  lambdify.cpp  ldegree.cpp  math.cpp  memory.cpp  (+54 more)
