# Target to get the header files into MSVC		
SET(INCS
            array_key.hpp
            base_series_multiplier.hpp
            cache_aligning_allocator.hpp
            convert_to.hpp
            divisor.hpp
            divisor_series.hpp
            dynamic_aligning_allocator.hpp
            exceptions.hpp
            foo.txt
            forwarding.hpp
            hash_set.hpp
            integer.hpp
            invert.hpp
            ipow_substitutable_series.hpp
            is_cf.hpp
            is_key.hpp
            key_is_convertible.hpp
            key_is_multipliable.hpp
            kronecker_array.hpp
            kronecker_monomial.hpp
            lambdify.hpp
            math.hpp
            memory.hpp
            monomial.hpp
            piranha.hpp
            poisson_series.hpp
            polynomial.hpp
            power_series.hpp
            print_coefficient.hpp
            print_tex_coefficient.hpp
            rational.hpp
            real.hpp
            real_trigonometric_kronecker_monomial.hpp
            runtime_info.hpp
            s11n.hpp
            safe_cast.hpp
            safe_convert.hpp
            series.hpp
            series_multiplier.hpp
            settings.hpp
            small_vector.hpp
            static_vector.hpp
            substitutable_series.hpp
            symbol_utils.hpp
            term.hpp
            thread_barrier.hpp
            thread_management.hpp
            thread_pool.hpp
            trigonometric_series.hpp
            tuning.hpp
            type_traits.hpp
            t_substitutable_series.hpp
            detail/atomic_flag_array.hpp
            detail/atomic_lock_guard.hpp
            detail/cf_mult_impl.hpp
            detail/config_clang.hpp
            detail/config_gcc.hpp
            detail/config_intel.hpp
            detail/debug_access.hpp
            detail/demangle.hpp
            detail/divisor_series_fwd.hpp
            detail/init.hpp
            detail/km_commons.hpp
            detail/monomial_common.hpp
            detail/parallel_vector_transform.hpp
            detail/poisson_series_fwd.hpp
            detail/polynomial_fwd.hpp
            detail/prepare_for_print.hpp
            detail/safe_integral_arith.hpp
            detail/series_fwd.hpp
            detail/series_multiplier_fwd.hpp
            detail/sfinae_types.hpp
            detail/small_vector_fwd.hpp
            detail/stacktrace.hpp
            detail/vector_hasher.hpp
            key/key_degree.hpp
            key/key_is_one.hpp
            key/key_is_zero.hpp
            key/key_ldegree.hpp
            math/binomial.hpp
            math/cos.hpp
            math/degree.hpp
            math/gcd.hpp
            math/gcd3.hpp
            math/is_one.hpp
            math/is_zero.hpp
            math/ldegree.hpp
            math/pow.hpp
            math/sin.hpp
                )
SOURCE_GROUP(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Header Files" FILES ${INCS})
ADD_LIBRARY(Headers STATIC ${INCS})
TARGET_INCLUDE_DIRECTORIES(Headers PRIVATE ${Boost_INCLUDE_DIR})
SET_TARGET_PROPERTIES(Headers PROPERTIES LINKER_LANGUAGE CXX CXX_STANDARD 11)
